--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<main style="text-align:center; padding: 40px;">
+<main style="text-align:center;">
     <!-- PDF 预览 -->
     <iframe 
       src="Yanyu Wu.pdf" 
